--- a/interface/w4.ui
+++ b/interface/w4.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>180</height>
+    <height>179</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -82,7 +82,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Z=X  Y</string>
+    <string>Z=X ⋂ Y</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_7">
