--- a/interface/w2.ui
+++ b/interface/w2.ui
@@ -16,14 +16,22 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>150</x>
+     <x>160</x>
      <y>10</y>
-     <width>67</width>
-     <height>17</height>
+     <width>541</width>
+     <height>31</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <family>Ubuntu Mono</family>
+     <pointsize>20</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
    <property name="text">
-    <string>formula</string>
+    <string>D = !C ⋂ (A  C) ⋂ (B  C) ⋂ (!C ∪ B)</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
